<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.ruszkipista.designyourjersey.MainActivity">

    <item
        android:id="@+id/action_options_reset"
        android:orderInCategory="100"
        android:title="@string/action_reset"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_options_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_options_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="never"
        />
</menu>