<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="6dp"
    android:layout_width="256dp"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jersey_name_dialog" />
    <EditText
        android:id="@+id/jersey_name_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jersey_number_dialog" />
    <EditText
        android:id="@+id/jersey_number_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jersey_color_dialog" />
    <ImageButton
        android:id="@+id/jersey_color_dialog"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:src="@drawable/jersey_blue"
        />
</LinearLayout>